{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 340,
  "lineage": "e5b390ec-7d04-c6b8-4105-c9768ed74d42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f355db51e16f43b6",
            "arn": "arn:aws:ec2:us-east-1:401744924043:elastic-ip/eipalloc-0f355db51e16f43b6",
            "association_id": "eipassoc-0402026c9094b218c",
            "domain": "vpc",
            "id": "eipalloc-0f355db51e16f43b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08c2a57b22f8158e1",
            "private_dns": "ip-10-0-1-106.ec2.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-52-4-165-115.compute-1.amazonaws.com",
            "public_ip": "52.4.165.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "laravel-blog-nat-eip-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-nat-eip-1",
              "Project": "laravel-blog"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a972df67589052d7",
            "arn": "arn:aws:ec2:us-east-1:401744924043:elastic-ip/eipalloc-0a972df67589052d7",
            "association_id": "eipassoc-0bfaec4678355c7fb",
            "domain": "vpc",
            "id": "eipalloc-0a972df67589052d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0835f4a31cebf71d3",
            "private_dns": "ip-10-0-2-110.ec2.internal",
            "private_ip": "10.0.2.110",
            "public_dns": "ec2-3-222-163-121.compute-1.amazonaws.com",
            "public_ip": "3.222.163.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "laravel-blog-nat-eip-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-nat-eip-2",
              "Project": "laravel-blog"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:internet-gateway/igw-082159be83fdfe9de",
            "id": "igw-082159be83fdfe9de",
            "owner_id": "401744924043",
            "tags": {
              "Name": "laravel-blog-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-igw",
              "Project": "laravel-blog"
            },
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:401744924043:loadbalancer/app/laravel-blog-alb/efdce347cb63906e",
            "arn_suffix": "app/laravel-blog-alb/efdce347cb63906e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "laravel-blog-alb-941765149.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:401744924043:loadbalancer/app/laravel-blog-alb/efdce347cb63906e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "laravel-blog-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0747488dfa76105b7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b2c43f022d89b59"
              },
              {
                "subnet_id": "subnet-0b349d6b1a08aa6d8"
              }
            ],
            "subnets": [
              "subnet-08b2c43f022d89b59",
              "subnet-0b349d6b1a08aa6d8"
            ],
            "tags": {
              "Name": "laravel-blog-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-alb",
              "Project": "laravel-blog"
            },
            "vpc_id": "vpc-0a326050b0509a5a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:401744924043:listener/app/laravel-blog-alb/efdce347cb63906e/10c66e853cc3f4a4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:401744924043:targetgroup/laravel-blog-app-tg/dbbda422487c655a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:401744924043:listener/app/laravel-blog-alb/efdce347cb63906e/10c66e853cc3f4a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:401744924043:loadbalancer/app/laravel-blog-alb/efdce347cb63906e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "laravel-blog-alb-listener"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-alb-listener",
              "Project": "laravel-blog"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:401744924043:targetgroup/laravel-blog-app-tg/dbbda422487c655a",
            "arn_suffix": "targetgroup/laravel-blog-app-tg/dbbda422487c655a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:401744924043:targetgroup/laravel-blog-app-tg/dbbda422487c655a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:401744924043:loadbalancer/app/laravel-blog-alb/efdce347cb63906e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "laravel-blog-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "laravel-blog-app-target-group"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-app-target-group",
              "Project": "laravel-blog"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f355db51e16f43b6",
            "association_id": "eipassoc-0402026c9094b218c",
            "connectivity_type": "public",
            "id": "nat-08601035d1681799c",
            "network_interface_id": "eni-08c2a57b22f8158e1",
            "private_ip": "10.0.1.106",
            "public_ip": "52.4.165.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b349d6b1a08aa6d8",
            "tags": {
              "Name": "laravel-blog-nat-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-nat-1",
              "Project": "laravel-blog"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a972df67589052d7",
            "association_id": "eipassoc-0bfaec4678355c7fb",
            "connectivity_type": "public",
            "id": "nat-09dbfda6b8063e090",
            "network_interface_id": "eni-0835f4a31cebf71d3",
            "private_ip": "10.0.2.110",
            "public_ip": "3.222.163.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b2c43f022d89b59",
            "tags": {
              "Name": "laravel-blog-nat-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-nat-2",
              "Project": "laravel-blog"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:route-table/rtb-019ba0d81e82711e6",
            "id": "rtb-019ba0d81e82711e6",
            "owner_id": "401744924043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08601035d1681799c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "laravel-blog-private-rt-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-private-rt-1",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:route-table/rtb-060612903f07a52bd",
            "id": "rtb-060612903f07a52bd",
            "owner_id": "401744924043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09dbfda6b8063e090",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "laravel-blog-private-rt-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-private-rt-2",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:route-table/rtb-08a53aa0b19045cf1",
            "id": "rtb-08a53aa0b19045cf1",
            "owner_id": "401744924043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082159be83fdfe9de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "laravel-blog-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-public-rt",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bd3109948df6f98",
            "route_table_id": "rtb-019ba0d81e82711e6",
            "subnet_id": "subnet-09a46c72faa1e2843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b0d723c68c7319",
            "route_table_id": "rtb-060612903f07a52bd",
            "subnet_id": "subnet-06bbf053ef59f7a19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d024776b07c1218c",
            "route_table_id": "rtb-08a53aa0b19045cf1",
            "subnet_id": "subnet-0b349d6b1a08aa6d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e829fefe006e5eb",
            "route_table_id": "rtb-08a53aa0b19045cf1",
            "subnet_id": "subnet-08b2c43f022d89b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:security-group/sg-0747488dfa76105b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0747488dfa76105b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-blog-alb-20250622201550850700000005",
            "name_prefix": "laravel-blog-alb-",
            "owner_id": "401744924043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-blog-alb-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-alb-sg",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:security-group/sg-01d1fd8ea10dad6db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d1fd8ea10dad6db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0747488dfa76105b7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-blog-ecs-20250622201557355000000007",
            "name_prefix": "laravel-blog-ecs-",
            "owner_id": "401744924043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-blog-ecs-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-ecs-sg",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:security-group/sg-0043d4b681746cf16",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0043d4b681746cf16",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d1fd8ea10dad6db"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-blog-opensearch-20250622201603389000000008",
            "name_prefix": "laravel-blog-opensearch-",
            "owner_id": "401744924043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-blog-opensearch-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-opensearch-sg",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:security-group/sg-0111e3cfc94ea6870",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0111e3cfc94ea6870",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d1fd8ea10dad6db"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "laravel-blog-rds-20250622201603389000000009",
            "name_prefix": "laravel-blog-rds-",
            "owner_id": "401744924043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-blog-rds-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-rds-sg",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:security-group/sg-0a9a592e3dd3803a3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a9a592e3dd3803a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d1fd8ea10dad6db"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "laravel-blog-redis-2025062220160338910000000a",
            "name_prefix": "laravel-blog-redis-",
            "owner_id": "401744924043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-blog-redis-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-redis-sg",
              "Project": "laravel-blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:subnet/subnet-09a46c72faa1e2843",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a46c72faa1e2843",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401744924043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-blog-private-subnet-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-private-subnet-1",
              "Project": "laravel-blog"
            },
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:subnet/subnet-06bbf053ef59f7a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbf053ef59f7a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401744924043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-blog-private-subnet-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-private-subnet-2",
              "Project": "laravel-blog"
            },
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:subnet/subnet-0b349d6b1a08aa6d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b349d6b1a08aa6d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401744924043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-blog-public-subnet-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-public-subnet-1",
              "Project": "laravel-blog"
            },
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:subnet/subnet-08b2c43f022d89b59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b2c43f022d89b59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401744924043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-blog-public-subnet-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-public-subnet-2",
              "Project": "laravel-blog"
            },
            "vpc_id": "vpc-0a326050b0509a5a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:401744924043:vpc/vpc-0a326050b0509a5a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0002a656495a1c276",
            "default_route_table_id": "rtb-0fb5f498cd6962cfd",
            "default_security_group_id": "sg-01c8c447dc70cfe3c",
            "dhcp_options_id": "dopt-0b33468f9615828d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a326050b0509a5a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb5f498cd6962cfd",
            "owner_id": "401744924043",
            "tags": {
              "Name": "laravel-blog-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "laravel-blog-vpc",
              "Project": "laravel-blog"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}